--- a/contrib/upstart/cjdns-dynamic.conf
+++ b/contrib/upstart/cjdns-dynamic.conf
@@ -25,7 +25,7 @@ pre-start script
         echo 'WARNING: A new cjdns-dynamic.conf file has been generated.'
     fi
 
-    if ! [ -e /etc/cjdns-dynamic.cjdnsadmin ]; then
+    if (! test -e /etc/cjdns-dynamic.cjdnsadmin) && test -x /usr/lib/cjdns/cjdnsadminmaker.py; then
         ( # start a subshell to avoid side effects of umask later on
             umask 077 # to create the file with 600 permissions without races
 
